[tool.poetry]
name = "telegram-backup-bot"
version = "0.1.0"
description = "Backup all Telegram channel/group content to another channel/group."
authors = ["SamsonHyacinth <samsonsanou@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.39.0"
cryptg = "^0.5.0.post0"
pillow = "^11.1.0"
hachoir = "^3.3.0"
aiohttp = "^3.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
